@@ -1,3 +1,12 @@
+2005-04-09  Mark Kettenis  <kettenis@gnu.org>
+
+	* ppcobsd-tdep.c: Update copyright year.  Include "trad-frame.h"
+	and "tramp-frame.h".
+	(ppcobsd_sigtramp_cache_init): New function.
+	(ppcobsd_sigtramp): New variable.
+	(ppcobsd_init_abi): Prepend signal trampoline unwinder.
+	* Makefile.in (ppcobsd-tdep.o): Update dependencies.
+
 2005-04-08  Andrew Cagney  <cagney@gnu.org>
 
 	* MAINTAINERS (GDB/MI): Andrew Cagney, Elena Zannoni, and Fernando
